[package]
name = "storyteller"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3" }           # Dynamic linking enabled through just (--features bevy/dynamic-linking) for faster compiles
bevy_egui = "0.38.1"
egui_taffy = "0.10.0"
storyframe = { path = "../storyframe" }
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
